test-suite/tests/ui/states/undeclared_assert.stderr
error: asserted state is not declared
 --> tests/ui/states/undeclared_assert.rs:8:21
  |
8 |     #[stated(assert(B))]
  |                     ^
