test-suite/tests/ui/states/undeclared_assert.rs
use stated::stated;

#[stated(states(A))]
pub struct Test<#[stated] S>;

#[stated]
impl<#[stated] S> Test<S> {
    #[stated(assert(B))]
    pub fn foo(self) {}
}

fn main() {}
